[package]
name = "clp-src"
version = "0.1.0+1.17.7"
edition = "2021"
build = "build.rs"
links = "Clp"
license = "Apache-2.0"
description = "The low-level bindings to the COIN-OR Clp library."
repository = "https://github.com/Maroon502/clp-src.git"
keywords = ["coin-or", "Clp", "Clp-src"]
readme = "README.md"
authors = [
    "Maroon502<maroon502@outlook.com>"
]
exclude = [
    "Clp/**/*",
    "!Clp/Clp/src/**/*",
    "!**/LICENSE",
    "!**/AUTHORS",
]

[features]
default = ["with_osi", "clpsolver"]
clpsolver = []
with_osi = ["osi-src"]

[dependencies]
coinutils-src = {git = "https://github.com/Maroon502/coinutils-src.git"}
osi-src = {git = "https://github.com/Maroon502/osi-src.git", optional = true}

[build-dependencies]
cc = "1.0"
coin-build-tools = { git = "https://github.com/Maroon502/coin-build-tools.git" }