[package]
name = "clp-src"
version = "0.2.4+1.17.8"
edition = "2021"
build = "build.rs"
links = "Clp"
license = "Apache-2.0"
documentation = "https://docs.rs/clp-src/"
description = "Redistribution of Coin-OR Clp as a crate"
repository = "https://github.com/Maroon502/clp-src.git"
keywords = ["coin-or", "Clp", "Clp-src"]
readme = "README.md"
authors = [
    "Maroon502<maroon502@outlook.com>"
]
exclude = [
    "Clp/**/*",
    "!Clp/Clp/src/**/*",
    "!**/LICENSE",
    "!**/AUTHORS",
]

[features]
default = ["osiclp"]
clpsolver = []
osiclp = ["osi-src"]

[dependencies]
coinutils-src = "0.2"
osi-src = { version = "0.2", optional = true}

[build-dependencies]
cc = "1.0"
coin-build-tools = "0.2"